--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -122,7 +122,7 @@ textarea {
  * Addresses margins handled incorrectly in IE6/7
  */
 body {
-  margin: 0;
+  margin: 10px auto;
 }
 
 /* =============================================================================
