--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 h1{
     text-align: center;
     font-weight: 600;
-    background-color: #fff;
+    background-color: #f2f2f2;
 }
 
 h3{
@@ -32,7 +32,7 @@ p{
     color: #f2f2f2;
 }
 
-p span{color: #000;}
+p span{}
 
 ul{
 
